--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ hilt = "2.52"
 androidx-hilt = "1.2.0"
 nav = "2.8.3"
 icons-extended = "1.7.4"
+parcelize = "2.0.21"
 
 
 [libraries]
@@ -50,3 +51,4 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 # Additional
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt"}
+kotlin-parcelize = { id = "org.jetbrains.kotlin.plugin.parcelize", version.ref = "parcelize" }
