020 Applied Coil library and implementing ExploreView

--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ iconsExtended = "1.7.5"
 parcelize = "2.0.21"
 gms = "4.4.2"
 firebaseAuth = "23.1.0"
+coil = "3.0.2"
 
 [libraries]
 # Default
@@ -45,6 +46,7 @@ dagger-hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-g
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth"}
 # Etc
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended"}
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 
 [plugins]
 # Default
