--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -7,19 +7,21 @@ junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2024.10.01"
+composeBom = "2024.11.00"
 # Additional
 ksp = "2.0.21-1.0.26"
 hilt = "2.52"
 androidxHilt = "1.2.0"
-nav = "2.8.3"
+nav = "2.8.4"
 iconsExtended = "1.7.5"
+activity = "1.9.3"
 parcelize = "2.0.21"
 gms = "4.4.2"
-firebaseAuth = "23.1.0"
 coil = "3.0.2"
+accompanist = "0.29.0-alpha"
+firebaseAuth = "23.1.0"
 firebaseBom = "33.6.0"
+firebaseAnalytics = "22.1.2"
 
 
 [libraries]
@@ -29,7 +31,7 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
@@ -46,11 +48,13 @@ dagger-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-andro
 dagger-hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
 # Firebase
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth"}
-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
+firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebaseAnalytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 # Etc
+androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended"}
 coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist"}
 
 [plugins]
 # Default
