--- a/frontend/gradle/libs.versions.toml
+++ b/frontend/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ accompanist = "0.29.0-alpha"
 firebaseAuth = "23.1.0"
 firebaseBom = "33.6.0"
 firebaseAnalytics = "22.1.2"
+firebaseDatabase = "21.0.0"
 
 
 [libraries]
@@ -50,6 +51,7 @@ dagger-hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-g
 firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth"}
 firebase-analytics = { module = "com.google.firebase:firebase-analytics", version.ref = "firebaseAnalytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-database = { module = "com.google.firebase:firebase-database", version.ref = "firebaseDatabase" }
 # Etc
 androidx-activity = { group = "androidx.activity", name = "activity-ktx", version.ref = "activity" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "iconsExtended"}
